--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -54,9 +54,9 @@ header {
 
         img {
             display: block;
-            max-width: 240px;
+            max-width: 70%;
             border-radius: 50%;
-            margin: 0px 50px;
+            margin: 0px 15%;
         }
     }
 
@@ -78,9 +78,6 @@ header {
         }
     }
 }
-
-
-
 
 footer {
     width: 100%;
