--- a/_sass/rob-theme.scss
+++ b/_sass/rob-theme.scss
@@ -5,7 +5,7 @@
 
 body {
     width:100%;
-    font-size: 75%;
+    font-size: 90%;
     font-family: verdana, arial;
     margin: 0px;
     padding: 0px;
@@ -20,9 +20,6 @@ h1, h2, h3, h4 {
 p, li {
     line-height:1.5em;
     margin: 0.75em 0;
-}
-
-p,li {
     font-size: 1.25em;
 }
 
@@ -33,7 +30,7 @@ li {
 
 small {
     font-size: 0.75em;
-    line-height: 1em;
+    line-height: 1.5em;
     display: block;
     margin: 1.25em 0;
 }
